--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <header class="top-header">
         <a
           class="top-header__link top-header__link--mail"
-          href="mailto:joanna@dompodwierzba.pl"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joanna@dompodwierzba.pl</a
+          href="mailto:joannaszypula1@gmail.com"
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -48,7 +48,7 @@
             </picture>
           </a>
         </div>
-       
+
         <nav class="mainmenu" role="navigation">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"
@@ -58,18 +58,20 @@
             <li><a class="mainmenu__link" href="index.html">Home</a></li>
 
             <li class="dropdown dropdown-wrapper drop-item">
-              <a class="mainmenu__link drop-item" href="#" aria-haspopup="true">Oferta</a>
+              <a class="mainmenu__link drop-item" href="#" aria-haspopup="true"
+                >Oferta</a
+              >
               <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Wypoczynek z Nordic Walking</a
+                    >Nordic <br/>Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia holistyczna</a
+                    >Terapia <br/>holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -93,57 +95,10 @@
                 >LGD Dobra Widawa</a
               >
             </li>
-            <!-- <div id="main-menu-marker"></div>-->
           </ul>
         </nav>
 
-        <!-- <nav class="mainmenu" role="navigation">
-          <input class="menu-btn" type="checkbox" id="menu-btn" />
-          <label class="menu-icon" for="menu-btn"
-            ><span class="navicon"></span
-          ></label>
-          <ul class="mainmenu-ul">
-            <li><a class="mainmenu__link" href="index.html">Home</a></li>
-
-            <li class="dropdown dropdown-wrapper drop-item">
-              <a class="mainmenu__link drop-item" href="#" aria-haspopup="true">Oferta</a>
-              <ul class="drop-menu" aria-label="submenu">
-                <li class="drop-item">
-                  <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Wypoczynek z Nordic Walking</a
-                  >
-                </li>
-                <li class="drop-item">
-                  <a
-                    class="mainmenu__link--drop"
-                    href="terapia-holistyczna.html"
-                    >Terapia holistyczna</a
-                  >
-                </li>
-                <li class="drop-item">
-                  <a class="mainmenu__link--drop" href="akupunktura.html"
-                    >Akupunktura</a
-                  >
-                </li>
-                <li class="drop-item">
-                  <a class="mainmenu__link--drop" href="warsztaty.html"
-                    >Warsztaty</a
-                  >
-                </li>
-              </ul>
-            </li>
-
-            <li><a class="mainmenu__link" href="kontakt.html">Kontakt</a></li>
-            <li>
-              <a
-                class="mainmenu__link mainmenu__link--discreet"
-                href="lgd-dobra-widawa.html"
-                >LGD Dobra Widawa</a
-              >
-            </li>
-          </ul>
-        </nav> -->
-
+      
       </header>
 
       <section class="site-content">
@@ -166,14 +121,15 @@
             Europejski Fundusz Rolny na rzecz Rozwoju Obszarów Wiejskich: Europa
             inwestująca w obszary wiejskie
           </p>
-
           <p class="fund-info__text">
-            Operacja pn. "Dom pod Wierzbą - wypoczynek z Nordic Walking i
+            Operacja pn.: "Dom pod Wierzbą - wypoczynek z Nordic Walking i
             Fizjoterapią" mająca na celu utworzenie działalności gospodarczej na
             obszarze Dolnej Widawy i stworzenie jednego miejsca pracy
             współfinansowana jest ze środków Unii Europejskiej w ramach
-            działania „Wsparcie dla rozwoju lokalnego w ramach inicjatywy
-            LEADER” Programu Rozwoju Obszarów Wiejskich na lata 2014-2020.
+            działania 19. Wsparcie dla rozwoju lokalnego w ramach inicjatywy
+            LEADER, <b>poddziałanie 19.2 Wsparcie na wdrażanie operacji w ramach
+            strategii rozwoju lokalnego kierowanego przez społeczność Programu
+            Rozwoju Obszarów Wiejskich na lata 2014-2020.</b>
           </p>
 
           <p class="fund-info__text">
@@ -190,7 +146,7 @@
               <header class="offer-article__header">
                 <img
                   class="offer-article__thumb"
-                  src="images/oferta-glowna-nordic-walking.jpg"
+                  src="images/oferta-glowna-nordic-walking-alt.jpg"
                   alt="Nordic Walking w Domu Pod Wierzbą"
                 />
                 <h2 class="offer-article__heading">
@@ -295,11 +251,11 @@
             />
 
             <p class="about-article__text">
-              Piętro to czterdziestopięciometrowa sala warsztatowa wyposażona w
-              materace i poduchy. Na parterze do dyspozycji jest salon, dwie
-              łazienki. Można też skorzystać z naszego gabinetu terapeutycznego.
-              W domu jest dużo przestrzeni i swobody. Przyroda przez obszerne
-              okna wnika do wnętrza, a gdy na trawniku smakołyków szukają dwa
+              Piętro to 45-cio metrowa sala warsztatowa wyposażona w materace i
+              poduchy. Na parterze do dyspozycji jest salon, dwie łazienki.
+              Można też skorzystać z naszego gabinetu terapeutycznego. W domu
+              jest dużo przestrzeni i swobody. Przyroda przez obszerne okna
+              wnika do wnętrza, a gdy na trawniku smakołyków szukają dwa
               zaprzyjaźnione jelonki, serce mocniej bije, gdy się im patrzy
               prosto w oczy z tak bliskiej odległości.
             </p>
@@ -397,9 +353,9 @@
                 55-220 Jelcz-Laskowice
               </p>
               <p>
-                <a class="contact__link" href="mailto:joanna@dompodwierzba.pl"
+                <a class="contact__link" href="mailto:joannaszypula1@gmail.com"
                   ><i class="far fa-envelope">&nbsp;&nbsp;</i
-                  >joanna@dompodwierzba.pl</a
+                  >joannaszypula1@gmail.com</a
                 >
               </p>
               <p>
@@ -407,7 +363,7 @@
                   ><i class="fas fa-phone-alt">&nbsp;</i>+48 730700277</a
                 >
               </p>
-              <button class="contact__button">więcej informacji</button>
+              <a href="kontakt.html"><button class="contact__button">więcej informacji</button></a>
             </div>
           </div>
 
@@ -483,9 +439,9 @@
             <p>
               <a
                 class="footer__contact-link--mail"
-                href="mailto:joanna@dompodwierzba.pl"
+                href="mailto:joannaszypula1@gmail.com"
                 ><i class="far fa-envelope">&nbsp;&nbsp;</i
-                >joanna@dompodwierzba.pl</a
+                >joannaszypula1@gmail.com</a
               >
             </p>
             <p>
