--- a/warsztaty.html
+++ b/warsztaty.html
@@ -18,8 +18,8 @@
       <header class="top-header">
         <a
           class="top-header__link top-header__link--mail"
-          href="mailto:joanna@dompodwierzba.pl"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joanna@dompodwierzba.pl</a
+          href="mailto:joannaszypula1@gmail.com"
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -29,23 +29,28 @@
       </header>
 
       <header class="site-header palegreen">
-        <div class="site-header__logo">
+         <div class="site-header__logo">
           <a href="index.html">
-
             <picture>
               <source
                 srcset="images/logo-dom-pod-wierzba-230x103.png"
                 media="(min-width: 1024px)"
               />
-              <source srcset="images/logo-dom-pod-wierzba-179x80.png" media="(min-width: 768px)" />
-              <img src="images/logo-dom-pod-wierzba-145x65.png" alt="Dom Pod Wierzbą logotyp" />
+              <source
+                srcset="images/logo-dom-pod-wierzba-179x80.png"
+                media="(min-width: 768px)"
+              />
+              <img
+                class="site-header__logo-img"
+                src="images/logo-dom-pod-wierzba-145x65.png"
+                alt="Dom Pod Wierzbą logotyp"
+              />
             </picture>
-
           </a>
         </div>
 
     
-        <nav class="mainmenu navigation--js">
+           <nav class="mainmenu" role="navigation">
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"
             ><span class="navicon"></span
@@ -54,18 +59,20 @@
             <li><a class="mainmenu__link" href="index.html">Home</a></li>
 
             <li class="dropdown dropdown-wrapper drop-item">
-              <a class="mainmenu__link drop-item" href="#offer">Oferta</a>
-              <ul class="drop-menu">
+              <a class="mainmenu__link drop-item" href="#" aria-haspopup="true"
+                >Oferta</a
+              >
+              <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Wypoczynek z Nordic Walking</a
+                    >Nordic <br/>Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia holistyczna</a
+                    >Terapia <br/>holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -89,7 +96,6 @@
                 >LGD Dobra Widawa</a
               >
             </li>
-            <!-- <div id="main-menu-marker"></div> -->
           </ul>
         </nav>
       </header>
@@ -211,12 +217,12 @@
               Domu pod Wierzbą lub jesteś zainteresowana udziałem w jakimś
               warsztacie:
             </p>
-
+            <p>&nbsp;</p>
             <p>
               <a
                 class="contact__link--alt"
-                href="mailto:joanna@dompodwierzba.pl"
-                >joanna@dompodwierzba.pl</a
+                href="mailto:joannaszypula1@gmail.com"
+                >joannaszypula1@gmail.com</a
               >
             </p>
             <p>
@@ -322,8 +328,9 @@
       </section>
 
   <footer class="footer">
+          <footer class="footer">
         <div class="footer__4-col">
-          <section class="footer__section">
+          <section class="footer__section off-on-mob">
             <img
               src="images/logo-dom-pod-wierzba-coffee.png"
               alt="pod pod wierzbą logotyp"
@@ -372,9 +379,9 @@
             <p>
               <a
                 class="footer__contact-link--mail"
-                href="mailto:joanna@dompodwierzba.pl"
+                href="mailto:joannaszypula1@gmail.com"
                 ><i class="far fa-envelope">&nbsp;&nbsp;</i
-                >joanna@dompodwierzba.pl</a
+                >joannaszypula1@gmail.com</a
               >
             </p>
             <p>
