client requested adjustment part I

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,12 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kontakt - Dom Pod Wierzbą</title>
 
-    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+       <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/style.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/9eaa68d1c9.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H8Z93KH10G"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H8Z93KH10G");
+    </script>
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
 
   <body>
@@ -128,15 +164,15 @@
               </h2>
               <p>Marzena Krajzel DOM POD WIERZBĄ</p>
               <p>Brzezinki <br>ul. Główna 34 <br>55-220 Jelcz-Laskowice</p>
-              <p>NIP: 6391388482</p>
-              <p>REGON: 382025120</p>
+              <p>NIP: <strong>6391388482</strong></p>
+              <p>REGON: <strong>382025120</strong> </p>
 
               <h2 class="subpage-article__heading2">
              Konto bankowe:
               </h2>
               <p>
                 Bank Spółdzielczy w Oławie <br>Marzena Krajzel DOM POD WIERZBĄ <br>Nr
-                rachunku: 79 9585 0007 3005 0200 2804 0001
+                rachunku: <strong>79 9585 0007 3005 0200 2804 0001</strong>
               </p>
 
 
