--- a/index.html
+++ b/index.html
@@ -11,6 +11,42 @@
       src="https://kit.fontawesome.com/9eaa68d1c9.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H8Z93KH10G"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H8Z93KH10G");
+    </script>
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/favicon/site.webmanifest" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
   </head>
 
   <body class="bkgd-image">
@@ -19,7 +55,8 @@
         <a
           class="top-header__link top-header__link--mail"
           href="mailto:joannaszypula1@gmail.com"
-          ><i class="far fa-envelope">&nbsp;&nbsp;</i>joannaszypula1@gmail.com</a
+          ><i class="far fa-envelope">&nbsp;&nbsp;</i
+          >joannaszypula1@gmail.com</a
         >
         <a
           class="top-header__link top-header__link--tel"
@@ -64,14 +101,14 @@
               <ul class="drop-menu" aria-label="submenu">
                 <li class="drop-item">
                   <a class="mainmenu__link--drop" href="nordic-walking.html"
-                    >Nordic <br/>Walking</a
+                    >Nordic <br />Walking</a
                   >
                 </li>
                 <li class="drop-item">
                   <a
                     class="mainmenu__link--drop"
                     href="terapia-holistyczna.html"
-                    >Terapia <br/>holistyczna</a
+                    >Terapia <br />holistyczna</a
                   >
                 </li>
                 <li class="drop-item">
@@ -97,8 +134,6 @@
             </li>
           </ul>
         </nav>
-
-      
       </header>
 
       <section class="site-content">
@@ -127,9 +162,12 @@
             obszarze Dolnej Widawy i stworzenie jednego miejsca pracy
             współfinansowana jest ze środków Unii Europejskiej w ramach
             działania 19. Wsparcie dla rozwoju lokalnego w ramach inicjatywy
-            LEADER, <b>poddziałanie 19.2 Wsparcie na wdrażanie operacji w ramach
-            strategii rozwoju lokalnego kierowanego przez społeczność Programu
-            Rozwoju Obszarów Wiejskich na lata 2014-2020.</b>
+            LEADER,
+            <b
+              >poddziałanie 19.2 Wsparcie na wdrażanie operacji w ramach
+              strategii rozwoju lokalnego kierowanego przez społeczność Programu
+              Rozwoju Obszarów Wiejskich na lata 2014-2020.</b
+            >
           </p>
 
           <p class="fund-info__text">
@@ -334,7 +372,7 @@
 
         <section class="contact">
           <header class="contact__header">
-            <h2 class="contact__heading">Kontakt i dojazd</h2>
+            <h2 class="contact__heading">Zapraszamy!</h2>
           </header>
 
           <div class="contact__info">
@@ -363,7 +401,9 @@
                   ><i class="fas fa-phone-alt">&nbsp;</i>+48 730700277</a
                 >
               </p>
-              <a href="kontakt.html"><button class="contact__button">więcej informacji</button></a>
+              <a href="kontakt.html"
+                ><button class="contact__button">więcej informacji</button></a
+              >
             </div>
           </div>
 
